@@ -18,6 +18,7 @@ eggs = batou
        sphinx
        zest.releaser
        mock
+       pip
        pytest
        pytest-cache
        pytest-capturelog
