@@ -1,11 +1,0 @@
-[buildout]
-parts = pycountry
-versions = versions
-
-[pycountry]
-recipe = zc.recipe.egg
-interpreter = py
-
-[versions]
-setuptools = 1.3.2
-zc.buildout = 1.7.1
