@@ -1,7 +1,0 @@
-[buildout]
-parts = simplejson
-index = http://pypi.gocept.com/simple
-
-[simplejson]
-recipe = zc.recipe.egg
-interpreter = py
