@@ -4,4 +4,4 @@ update_method = rsync
 timeout = 30
 
 [hosts]
-localhost = py24, py25, py26, py27, py32, py33, py34, py35
+localhost = py26, py27, py33, py34, py35
