@@ -3,6 +3,6 @@ MarkupSafe==0.23
 apipkg==1.4
 Jinja2==2.8
 requests==2.9.1
-setuptools==19.7
+setuptools==25.1.6
 execnet==1.4.1
 py==1.4.31
