@@ -28,6 +28,7 @@ mock = 1.3.0
 packaging = 16.0
 pbr = 1.8.1
 pep8 = 1.7.0
+pip = 8.1.2
 pkginfo = 1.2.1
 py = 1.4.31
 pyflakes = 1.0.0
@@ -44,7 +45,7 @@ pytz = 2015.7
 readme-renderer = 0.7.0
 requests = 2.9.1
 requests-toolbelt = 0.6.0
-setuptools = 19.7
+setuptools = 25.1.6
 six = 1.10.0
 snowballstemmer = 1.2.1
 Sphinx = 1.3.5
